--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node bin/server.js ",
+    "start": "node build/bin/server.js",
     "build": "node ace build",
     "dev": "node ace serve --hmr",
     "test": "node ace test",
@@ -48,8 +48,8 @@
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.0",
-    "typescript": "~5.7",
-    "ts-node-maintained": "^10.9.5"
+    "ts-node-maintained": "^10.9.5",
+    "typescript": "~5.7"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.3.1",
