--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "node build/bin/server.js",
-    "build": "node ace build",
+    "build": "node ace build && cp swagger.yml build/swagger.yml",
     "dev": "node ace serve --hmr",
     "test": "node ace test",
     "lint": "eslint .",
